# aws-cdk-apache-doris

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  cdk.json  package-lock.json  pyproject.toml
.github/workflows/: publish.yml  test-develop.yml  test-pr.yml
notes/: divergence-summary.md
references/: cloudformation_doris.template.yaml  doris_bastion.template.yaml  doris_be.template.yaml  doris_fe.template.yaml  doris_sec_group.template.yaml
src/aws_cdk_apache_doris/: __init__.py  doris_cluster.py
src/aws_cdk_apache_doris/constructs/: __init__.py  bastion.py  be_fleet.py  fe_fleet.py  security_groups.py
src/aws_cdk_apache_doris/lambda_src/: create_s3_endpoint.py  enable_dns.py  get_enable_pvd.py
src/aws_cdk_apache_doris/user_data/: __init__.py  be_user_data.sh  fe_user_data.sh
tests/: __init__.py  test_version.py
